# openemr-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
evals/: eval_cases.json  run_evals.py
examples/: demo_mock_tools.py
src/openemr_mcp/: __init__.py  auth.py  config.py  data_source.py  schemas.py  server.py
src/openemr_mcp/repositories/: _errors.py  appointment.py  drug_safety.py  fhir_api.py  medication.py  patient.py  provider.py  trajectory.py
src/openemr_mcp/services/: openfda_client.py  safety.py  trajectory_alerts.py  visit_prep_assembler.py  visit_prep_collectors_clinical.py  visit_prep_collectors_context.py  visit_prep_rules.py  visit_prep_verifier.py
src/openemr_mcp/tools/: appointments.py  drug_interactions.py  drug_safety.py  fda.py  lab_trends.py  medications.py  patient.py  providers.py  questionnaire.py  symptoms.py  trajectory.py  visit_prep.py  vital_trends.py
tests/: conftest.py  test_tools.py
